5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1747_3093.log
== TEST (2019-05-16 10:15:38) 
-- CODE:
z = input("vitorias, derrotas e empates: ")

soma=0
i = 0
while (z=X):
	soma = soma + z
	
	
		
	
-- ERROR:
File "XXXX", line 5
    while (z=X):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:15:49) 
-- CODE:
z = input("vitorias, derrotas e empates: ")

soma=0
i = 0
while (z==X):
	soma = soma + z
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while (z==X):
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:26) 
-- CODE:
z = input("vitorias, derrotas e empates: ").upper()

soma=0
i = 0
while (z=="X"):
	soma = soma + z
	if (z == V):
		V == 3
	elif(z == E):
		E == 1
	else(z == D):
		D == 0
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 11
    else(z == D):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:08) 
-- CODE:
z = input("vitorias, derrotas e empates: ").upper()

soma=0
i = 0
while (z=="X"):
	soma = soma + z
	if (z == "V"):
		V == 3
	elif(z == "E"):
		E == 1
	else(z == "D"):
		D == 0
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 11
    else(z == "D"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:05) 
-- CODE:
z = input("V, D ou E: ").upper()

soma=0
i = 0
while (z=="X"):
	soma = soma + z
	 z = input("V, D ou E: ").upper
	if (z == "V"):
		V == 3
	elif(z == "E"):
		E == 1
	else(z == "D"):
		D == 0
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 7
    z = input().upper
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:27) 
-- CODE:
z = input("V, D ou E: ").upper()

soma=0
while (z=="X"):
	soma = soma + z
	 z = input("V, D ou E: ").upper
	if (z == "V"):
		V == 3
	elif(z == "E"):
		E == 1
	else(z == "D"):
		D == 0
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 6
    z = input().upper
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:10) 
-- CODE:
z = input("V, D ou E: ").upper()

soma = 0
while (z=="X"):
	soma = soma + z
	
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 6
    z = input().upper
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:19) 
-- CODE:
z = input("V, D ou E: ").upper()
V == 3
E == 1
D == 0
soma = 0
while (z=="X"):
	soma = soma + z
	
	
print(soma)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V == 3
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:53) 
-- CODE:
z = input("V, D ou E: ").upper()
"V" == 3
"E" == 1
"D" == 0
soma = 0
while (z=="X"):
	soma = soma + z
	
	
print(soma)
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V == 3
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:45) 
-- CODE:
z = input("V, D ou E: ").upper()
"V" == 3
"E" == 1
"D" == 0
soma = 0
while (z == "X"):
	soma = z + z
	
	
   print(soma)
		
		
	
-- ERROR:
File "XXXX", line 10
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:52) 
-- CODE:
z = input("V, D ou E: ").upper()
"V" == 3
"E" == 1
"D" == 0
soma = 0
while (z == "X"):
	soma = z + z
	
	
	print(soma)
		
		
	
-- ERROR:
File "XXXX", line 10
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:21) 
-- CODE:
z = input("V, D ou E: ").upper()
"V" == 3
"E" == 1
"D" == 0
soma = 0
while (z == "X"):
	soma = soma + z
	
	
print(soma)
		
		
	
-- ERROR:
File "XXXX", line 10
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:34) 
-- CODE:
z = input("V, D ou E: ").upper

i = 0
soma = 0

while(z == "X"):
	soma = soma + z
	i = i + 1
	
	

		
		
	
-- ERROR:
File "XXXX", line 10
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:50) 
-- CODE:
z = input("V, D ou E: ").upper

i = 0
soma = 0

while(z = "X"):
	soma = soma + z
	i = i + 1
	
	

		
		
	
-- ERROR:
File "XXXX", line 6
    while(z = "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:21) 
-- CODE:
f = input("V, E e D").upper

i = 0

while (f == "X"):
   i = i + 1

	
	

		
		
	
-- ERROR:
File "XXXX", line 6
    while(z = "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:29) 
-- CODE:
f = input("V, E e D: ").upper

i = 0

while (f == "X"):
   i = i + 1

	
	

		
		
	
-- ERROR:
File "XXXX", line 6
    while(z = "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:47) 
-- CODE:
f = input("V, E e D: ").upper

i = 0

while (f == "X"):
   i = i + 1

print(i)
	

		
		
	
-- ERROR:
File "XXXX", line 6
    while(z = "X"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
